0.17 2013-04-15
        - Added experimental on_init hook.
	- Made -base faster.

0.16 2013-04-12
        - Fixed a small bug in extension copying.
	- Fixed a huge bug in XML treatment of strings.
	- Added experimental as() method.
	- Fixed add for fragments.
	- Fixed sequence bug in XRD.
	- Added experimental note to extension.

0.15 2013-04-06
        - Small improvement in filter_rel().
	- Added default namespace to 'XML::Loy::' via
	  prepended minus symbol.
	- Changed namespace prefix to 'loy' and
	  namespace to 'http://sojolicio.us/ns/xml-loy'.
	- Improvements to documentation.

0.14 2013-04-03
        - Improved test suite.
	- Added experimental filter_rel() method to
	  XML::Loy::XRD.

0.13 2013-03-29
        - Fixed bug for XML string on construction.
	- Some documentation improvements.
	- Fixed bug in children() reimplementation.

0.12 2013-03-23
        - Made mime class method.
	- Fixed bug for invalid element names.

0.11 2013-03-23
        - Fixed bug in RFC822.

0.10 2013-03-21
        - Update Dependency (Unicode).
	- Add Unicode test.

0.09 2013-03-16
        - Added Date::RFC822.
	- Improved Date::RFC3339.

0.08 2013-03-11
        - Fixed time::local test to work with perl-5.10.1.
	- Fixed undefined type length in children().
	- Don't use constants.

0.07 2013-03-10
        - Added Atom::Threading.
	- Fixed bug in Atom::link().
	- Improved Warnings.
	- Improved tests.

0.06 2013-03-08
        - Fix indexing error on CPAN.
  	- Reintroduced version information to Date::RFC3339.

0.05 2013-03-08
        - Fix documentation bugs.
        - Fix small bug in Atom::category.
	- Improved documentation.
	- Delete version information from Date::RFC3339.

0.04 2013-03-08
        - Added Atom and ActivityStreams.
	- Replaced "children" with own method.
        - Initial CPAN release.

0.03 2013-03-06
        - Renamed MojoX::XML to XML::Loy.

0.02 2013-02-17
        - Added XRD and HostMeta.
	- Added namespace, mime and extension attributes.