@@ -1,6 +1,7 @@
 0.17 2013-04-15
         - Added experimental on_init hook.
 	- Made -base faster.
+	- Changed return value of extension().
 
 0.16 2013-04-12
         - Fixed a small bug in extension copying.
